# devman-async-python-1

./: .gitignore  .pylintrc  .travis.yml  README.md  pyproject.toml
spaceship/: animations.py  constants.py  curses_tools.py  explosion.py  main.py  obstacles.py  physics.py  settings.py  ship.py  state.py  utils.py
spaceship/core/: animations.py  constants.py  loop.py  physics.py
spaceship/frames/: gameover.txt
spaceship/frames/explosion/: frame_00.txt  frame_01.txt  frame_02.txt  frame_03.txt
spaceship/objects/: __init__.py  frame.py  gameover.py  garbage.py  obstacles.py  ship.py  stars.py  timeline.py
tests/: test_frame.py
