[tool.poetry]
name = "spaceship"
version = "0.1.0"
description = "devman asynv python course modules 1-2"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
pytest = "^4.4"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
flake8 = "^3.7"
rope = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
